instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:2: error: not found: value setBrushDown
setBrushDown();
^InstructionsDrawG:28: error: not found: value setBrushUp
setBrushUp();
^